--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>FBS</groupId>
-    <artifactId>FlightBoookingSystem</artifactId>
+    <artifactId>FlightBookingSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
